Sat Mar  8 16:48:38 1997  Laurent Pautet  <pautet@inf.enst.fr>

	* s-garrem.adb: Add -n to rsh. It won't break anything and at
	least, it may avoid dup2 to fail.

Fri Mar  7 14:14:46 1997  Laurent Pautet  <pautet@inf.enst.fr>

	* s-garrem.adb, s-garrem.ads: Add a parameter Launcher to most of
 	the launching commands in order to change default "rsh" command
 	which was hardcoded.

	* s-garfil.ads: Add pragma Elaborate_Body to please GNAT with its
 	new elaboration checks.

Wed Mar  5 14:53:58 1997  Laurent Pautet  <pautet@inf.enst.fr>

	* s-garhea.ads: Add a new opcode User_Message.

	* s-parint.adb: Changed Public_RPC_Receiver into
 	Public_Message_Receiver.

Wed Mar  5 14:19:51 1997  Samuel Tardieu  <sam@inf.enst.fr>

	* s-gartcp.adb: Added missing pragma Elaborate_All (new checks in
	  today's wavefront).

	* s-gardeb.adb: Idem.

	* s-garsta.adb: Idem.

	* s-garter.adb: Idem.

	* s-stratt.adb: Renames Unchecked_Conversion into
	  Ada.Unchecked_Conversion. Comment out assertions because the
	  current package may not depend on System.Assertions because of
	  categorization pragma.

Fri Feb 28 16:45:36 1997  Laurent Pautet  <pautet@lglsun11.epfl.ch>

	* s-garfil.ads, s-garfil.adb, s-gafino.adb: Move decalration of
 	No_Fitler_name into System.Garlic.Filters private part.

Thu Feb 27 11:13:51 1997  Laurent Pautet  <pautet@lglsun11.epfl.ch>

	* s-gafino.adb: Change Dummy_Name from "" to "none".

	* s-garfil.adb, s-garfil.ads, s-gafino.adb: Change
 	Set_Register_Filter into Set_Registration_Filter and add several
 	default behaviour.

Wed Feb 26 11:28:07 1997  Laurent Pautet  <pautet@lglsun11.epfl.ch>

	* Makefile.am: Reduce the effort of a third party to add a new
 	filter. Clear almost everything that was dedicated to filters and
 	add @FILTERFILE@ which indicates where to include global filter
 	makefile.

	* Makefile.am: Forgot to copy ada files sources and objects.

Mon Feb 24 12:54:55 1997  Laurent Pautet  <pautet@lglsun11.epfl.ch>
